--- a/resources/views/front-end/riode/product-full-1.html
+++ b/resources/views/front-end/riode/product-full-1.html
@@ -878,10 +878,10 @@
 										<div class="product-form product-color">
 											<label>Color:</label>
 											<div class="product-variations">
-												<a class="color" data-src="images/demos/demo7/products/big1.jpg" href="#" style="background-color: #c8c7ce"></a>
-												<a class="color" data-src="images/demos/demo7/products/2.jpg" href="#" style="background-color: #537548"></a>
-												<a class="color" data-src="images/demos/demo7/products/3.jpg" href="#" style="background-color: #484975"></a>
-												<a class="color" data-src="images/demos/demo7/products/4.jpg" href="#" style="background-color: #313131"></a>
+												<a class="color"  href="#" style="background-color: #c8c7ce"></a>
+												<a class="color" href="#" style="background-color: #537548"></a>
+												<a class="color" href="#" style="background-color: #484975"></a>
+												<a class="color" href="#" style="background-color: #313131"></a>
 											</div>
 										</div>
 										<div class="product-form product-size">
